--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
   <head>
     <title>Final Project</title>
-    <link href="style.css" rel="stylesheet" type="text/css">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="style.css" rel="stylesheet" type="text/css">
   </head>
 <body>
-  <h1>2021-22 Big Ten Men's Basketball Preview</h1>
+  <h1>Big Ten Men's Basketball Preview and 2021-22 Power Rankings: Favorites, Contenders, Middle of the Pack, Basement</h1>
   <img class ="court" src="assets/bigtencourt.jpg" alt="Big Ten Court Logo">
-  <h6>Photo Courtesy: Big Ten Conference</h6>
+  <h6>Photo: Courtesy of The Big Ten Conference</h6>
   <p>The 2021-22 college basketball season officially tips off in just over a week on November 9. While last year’s season was truncated with COVID-19, fans are expected to pack arenas once again and bring college basketball to life.</p>
   <p>College basketball saw tons of change this offseason, especially in the <a href="https://bigten.org/index.aspx?path=mbball" target="_blank">Big Ten Conference</a>. But, after having nine teams make the NCAA Tournament last season, the Big Ten is expected to be just as deep in the 2021-22 campaign.</p>
   <p>The Big Ten Conference had six teams finish in the KenPom Top 25 rankings at the end of the 2020-21 season. In the 2021-22 KenPom Preseason Top 25, seven Big Ten teams were represented. Several teams made a jump in the rankings from the end of last year to this preseason, while others fell in the rankings.</p>
@@ -71,7 +72,7 @@
     </ul>
   <p>Perhaps no other team in the country had its plans changed in the offseason during the NBA Draft process as much as Illinois. Center Kofi Cockburn surprisingly withdrew from the NBA Draft and even after spending time in the transfer portal and narrowing his choices down to Kentucky, Florida State and Illinois, he elected to return to Champaign for his third season. Cockburn returns as one of the most ferocious and dominant big men in the entire country and was named the Big Ten Preseason Player of the Year, along with a Preseason AP All-American.</p>
   <img class="kofi" src="assets/koficockburn.jpg" alt="Kofi Cockburn">
-  <h6>Photo Courtesy: Stacy Revere/Getty Images</h6>
+  <h6>Photo: Stacy Revere for Getty Images</h6>
   <p>Illinois possesses one of the best inside-out duos in the conference with Cockburn and sophomore guard Andre Curbelo. The Big Ten Sixth Man of the Year from a year ago will move into a starting role for head coach Brad Underwood this year and he is poised for one of the biggest jumps in the sport. Curbelo landed on the Preseason All-Big Ten Team.</p>
   <p>Underwood returns a good chunk of Illinois’ talent from last season, including guard Trent Frazier for his fifth season. Though the departure of unanimous First Team All-Big Ten guard Ayo Dosunmu to his hometown Chicago Bulls in the NBA could be the most impactful departure in the conference. Curbelo is expected to take a massive second-year jump in place of Dosunmu and Frazier will still have to be the veteran leader.</p>
   <p>Coming off a Big Ten Tournament Championship and a No. 1 seed in the NCAA Tournament, Illinois has the same aspirations heading into the 2021-22 season. It will be one of the most dynamic teams in the Big Ten.</p>
@@ -271,6 +272,10 @@
     <p>With the departure of Richard Pitino and with how poorly Minnesota played, nearly all of its pieces from last season also exited the program to play elsewhere through the transfer portal. One of the most electrifying point guards in college basketball, Marcus Carr, transferred to Texas and seven-footer Liam Robbins is now at Vanderbilt.</p>
     <p>Each of the top seven scorers from Minnesota’s team last year has departed. They combined to average 70 points per game last year for the Golden Gophers, a team that totaled 72.5 points per game.</p>
     <p>Returning forward Isaiah Ihnen will miss the entire 2021-22 season due to a knee injury, it was announced in July. This is a massive blow for Johnson’s crew as Ihnen was one of the most talented returning players. Instead, Minnesota will have a ton of new faces who will all look to help the Golden Gophers remain out of the last place spot in the Big Ten.</p>
+    <div class="map">
+      <iframe title="Big Ten Conference" aria-label="map" id="datawrapper-chart-4j3Mn" src="https://datawrapper.dwcdn.net/4j3Mn/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="508"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();</script>
+    </div>
+
 <div class="footer">
   <p><a href="http://matt5levine.github.io/jour352/portfolio/mattlevine-resume">Matt Levine, Copyright</a></p>
 </div>
