done with final

--- a/index.html
+++ b/index.html
@@ -1,27 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Final Project</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Matt Levine">
+    <meta name="keywords" content="Big Ten, basketball, college basketball, NCAA">
+    <meta name="description" content="A preview of the 2021-22 Big Ten men's basketball season">
+    <title>Final Project</title>
     <link href="style.css" rel="stylesheet" type="text/css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Oswald&display=swap" rel="stylesheet">
   </head>
 <body>
   <h1>Big Ten Men's Basketball Preview and 2021-22 Power Rankings: Favorites, Contenders, Middle of the Pack, Basement</h1>
+  <h4>By: Matt Levine, <em>Testudo Times</em></h4>
+  <h4>Nov. 1, 2021</h4>
   <img class ="court" src="assets/bigtencourt.jpg" alt="Big Ten Court Logo">
-  <h6>Photo: Courtesy of The Big Ten Conference</h6>
+  <h6>The Big Ten is set to begin conference play on Dec. 5. / Photo: Courtesy of The Big Ten Conference</h6>
   <p>The 2021-22 college basketball season officially tips off in just over a week on November 9. While last year’s season was truncated with COVID-19, fans are expected to pack arenas once again and bring college basketball to life.</p>
   <p>College basketball saw tons of change this offseason, especially in the <a href="https://bigten.org/index.aspx?path=mbball" target="_blank">Big Ten Conference</a>. But, after having nine teams make the NCAA Tournament last season, the Big Ten is expected to be just as deep in the 2021-22 campaign.</p>
   <p>The Big Ten Conference had six teams finish in the KenPom Top 25 rankings at the end of the 2020-21 season. In the 2021-22 KenPom Preseason Top 25, seven Big Ten teams were represented. Several teams made a jump in the rankings from the end of last year to this preseason, while others fell in the rankings.</p>
+  <div class="kenpom">
   <iframe title="KenPom Ranking (End of 2020-21 &amp;amp; Preseason 2021-22)" aria-label="Bullet Bars" id="datawrapper-chart-6dC3m" src="https://datawrapper.dwcdn.net/6dC3m/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="569"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
 </script>
+</div>
   <p>Here’s what to expect from the 14 teams in the conference this season.</p>
 
   <h2>The Favorites</h2>
   <h3>Michigan Wolverines (Preseason AP No. 6)</h3>
     <a href="https://mgoblue.com/sports/mens-basketball" target="_blank">
       <!-- Link school webpage to logo -->
-      <img src="assets/michiganlogo.jpg" alt="Michigan Logo">
+      <img class="michigan" src="assets/michiganlogo.jpg" alt="Michigan Logo">
     </a>
     <ul class="list">
       <li>2020-21 record: 23-5 (14-3 Big Ten)</li>
@@ -41,7 +51,7 @@
   <h3>Purdue Boilermakers (Preseason AP No. 7)</h3>
     <a href="https://purduesports.com/sports/mens-basketball" target="_blank">
       <!-- Link school webpage to logo -->
-      <img src="assets/purduelogo.jpg" alt="Purdue Logo">
+      <img class="purdue" src="assets/purduelogo.jpg" alt="Purdue Logo">
     </a>
     <ul class="list">
       <li>2020-21 record: 18-10 (13-6 Big Ten)</li>
@@ -59,7 +69,7 @@
 
   <h3>Illinois Fighting Illini (Preseason AP No. 11)</h3>
     <a href="https://fightingillini.com/index.aspx" target="_blank">
-      <img src="assets/illinoislogo.jpg" alt="Illinois Logo">
+      <img class="illinois" src="assets/illinoislogo.jpg" alt="Illinois Logo">
     </a>
     <ul class="list">
       <li>2020-21 record: 24-7 (16-4 Big Ten)</li>
@@ -72,14 +82,14 @@
     </ul>
   <p>Perhaps no other team in the country had its plans changed in the offseason during the NBA Draft process as much as Illinois. Center Kofi Cockburn surprisingly withdrew from the NBA Draft and even after spending time in the transfer portal and narrowing his choices down to Kentucky, Florida State and Illinois, he elected to return to Champaign for his third season. Cockburn returns as one of the most ferocious and dominant big men in the entire country and was named the Big Ten Preseason Player of the Year, along with a Preseason AP All-American.</p>
   <img class="kofi" src="assets/koficockburn.jpg" alt="Kofi Cockburn">
-  <h6>Photo: Stacy Revere for Getty Images</h6>
+  <h6>Illionis junior center Kofi Cockburn was tabbed as the Big Ten Preseason Player of the Year / Photo: Stacy Revere for Getty Images</h6>
   <p>Illinois possesses one of the best inside-out duos in the conference with Cockburn and sophomore guard Andre Curbelo. The Big Ten Sixth Man of the Year from a year ago will move into a starting role for head coach Brad Underwood this year and he is poised for one of the biggest jumps in the sport. Curbelo landed on the Preseason All-Big Ten Team.</p>
   <p>Underwood returns a good chunk of Illinois’ talent from last season, including guard Trent Frazier for his fifth season. Though the departure of unanimous First Team All-Big Ten guard Ayo Dosunmu to his hometown Chicago Bulls in the NBA could be the most impactful departure in the conference. Curbelo is expected to take a massive second-year jump in place of Dosunmu and Frazier will still have to be the veteran leader.</p>
   <p>Coming off a Big Ten Tournament Championship and a No. 1 seed in the NCAA Tournament, Illinois has the same aspirations heading into the 2021-22 season. It will be one of the most dynamic teams in the Big Ten.</p>
   <h2>The Contenders</h2>
   <h3>Ohio State Buckeyes (Preseason AP No. 17)</h3>
     <a href="https://ohiostatebuckeyes.com/sports/m-baskbl/" target="_blank">
-      <img src="assets/ohiostatelogo.jpg" alt="Ohio State Logo">
+      <img class="osu" src="assets/ohiostatelogo.jpg" alt="Ohio State Logo">
     </a>
     <ul class="list">
       <li>2020-21 record: 21-10 (12-8 Big Ten)</li>
@@ -98,7 +108,7 @@
 
   <h3>Maryland Terrapins (Preseason AP No. 21)</h3>
     <a href="https://umterps.com/sports/mens-basketball" target="_blank">
-      <img src="assets/marylandlogo.jpg" alt="Maryland Logo">
+      <img class="umd" src="assets/marylandlogo.jpg" alt="Maryland Logo">
     </a>
     <ul class="list">
       <li>2020-21 record: 17-14 (9-11 Big Ten)</li>
@@ -116,7 +126,7 @@
 
   <h3>Michigan State Spartans (Preseason AP Receiving Votes)</h3>
     <a href="https://msuspartans.com/sports/mens-basketball" target="_blank">
-      <img src="assets/michiganstatelogo.jpg" alt="Michigan State Logo">
+      <img class="msu" src="assets/michiganstatelogo.jpg" alt="Michigan State Logo">
     </a>
     <ul class="list">
       <li>2020-21 record: 15-13 (9-11 Big Ten)</li>
@@ -134,7 +144,7 @@
 
   <h3>Indiana Hoosiers (Preseason AP Receiving Votes)</h3>
     <a href="https://iuhoosiers.com/sports/mens-basketball" target="_blank">
-      <img src="assets/indianalogo.jpg" alt="Indiana Logo">
+      <img class="iu" src="assets/indianalogo.jpg" alt="Indiana Logo">
     </a>
     <ul class="list">
       <li>2020-21 record: 12-15 (7-12 Big Ten)</li>
@@ -152,7 +162,7 @@
   <h2>Middle of the Pack</h2>
   <h3>Rutgers Scarlet Knights (Preseason AP Receiving Votes)</h3>
     <a href="https://scarletknights.com/sports/mens-basketball" target="_blank">
-      <img src="assets/rutgerslogo.jpg" alt="Rutgers Logo">
+      <img class="rutgers" src="assets/rutgerslogo.jpg" alt="Rutgers Logo">
     </a>
     <ul class="list">
       <li>2020-21 record: 16-12 (10-10 Big Ten)</li>
@@ -169,7 +179,7 @@
 
   <h3>Iowa Hawkeyes</h3>
     <a href="https://hawkeyesports.com/sports/mbball/" target="_blank">
-      <img src="assets/iowalogo.jpg" alt="Iowa Logo">
+      <img class="iowa" src="assets/iowalogo.jpg" alt="Iowa Logo">
     </a>
     <ul class="list">
       <li>2020-21 record: 22-9 (14-6 Big Ten)</li>
@@ -184,13 +194,14 @@
     <p>Starting guard C.J. Fredrick transferred to Kentucky and forward Jack Nunge transferred to Xavier, but on a positive note for the Hawkeyes, guard Jordan Bohannon is returning for his sixth season. Bohannon holds the Iowa record for career three-pointers made (364), games played (143), assists (639), and free throw percentage (.887). His 364 three-pointers rank the second-most in Big Ten history.</p>
     <p>The Hawkeyes will lean on Bohannon, sophomore forward Keegan Murray who was a Preseason All-Big Ten selection and made the All-Big Ten Freshman Team last season, guard Connor McCaffery, guard Joe Toussaint and forward Patrick McCaffery. The recruiting class and transfer portal did not help McCaffery and his staff as much as they could have, which is why the returning players will be important this season.</p>
     <p>Last season, Iowa led the Big Ten Conference in points per game and assists per game and the Hawkeyes were second in the conference in rebounds per game. Here's how the rest of the conference stacked up during the 2020-21 regular season:</p>
-
+    <div class="stats">
     <iframe title="2020-21 Big Ten Men's Basketball Team Stats" aria-label="Split Bars" id="datawrapper-chart-dtT5M" src="https://datawrapper.dwcdn.net/dtT5M/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="496"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
 </script>
+</div>
 
   <h3>Wisconsin Badgers</h3>
     <a href="https://uwbadgers.com/sports/mens-basketball" target="_blank">
-      <img src="assets/wisconsinlogo.jpg" alt="Wisconsin Logo">
+      <img class="wisco" src="assets/wisconsinlogo.jpg" alt="Wisconsin Logo">
     </a>
     <ul class="list">
       <li>2020-21 record: 18-13 (10-10 Big Ten)</li>
@@ -207,7 +218,7 @@
 
   <h3>Nebraska Cornhuskers</h3>
     <a href="https://huskers.com/sports/mens-basketball" target="_blank">
-      <img src="assets/nebraskalogo.jpg" alt="Nebraska Logo">
+      <img class="neb" src="assets/nebraskalogo.jpg" alt="Nebraska Logo">
     </a>
     <ul class="list">
       <li>2020-21 record: 7-20 (3-16 Big Ten)</li>
@@ -225,7 +236,7 @@
   <h2>The Basement</h2>
   <h3>Northwestern Wildcats</h3>
     <a href="https://nusports.com/sports/mens-basketball" target="_blank">
-      <img src="assets/northwesternlogo.jpg" alt="Northwestern Logo">
+      <img class="northwestern" src="assets/northwesternlogo.jpg" alt="Northwestern Logo">
     </a>
     <ul class="list">
       <li>2020-21 record: 9-15 (6-13 Big Ten)</li>
@@ -241,7 +252,7 @@
 
   <h3>Penn State Nittany Lions</h3>
     <a href="https://gopsusports.com/sports/mens-basketball" target="_blank">
-      <img src="assets/pennstatelogo.jpg" alt="Penn State Logo">
+      <img class="psu" src="assets/pennstatelogo.jpg" alt="Penn State Logo">
     </a>
     <ul class="list">
       <li>2020-21 record: 11-14 (7-12 Big Ten)</li>
@@ -258,7 +269,7 @@
 
   <h3>Minnesota Golden Gophers</h3>
     <a href="https://gophersports.com/index.aspx" target="_blank">
-      <img src="assets/minnesotalogo.jpg" alt="Minnesota Logo">
+      <img class="minny" src="assets/minnesotalogo.jpg" alt="Minnesota Logo">
     </a>
     <ul class="list">
       <li>2020-21 record: 14-15 (6-14 Big Ten)</li>
@@ -272,14 +283,10 @@
     <p>With the departure of Richard Pitino and with how poorly Minnesota played, nearly all of its pieces from last season also exited the program to play elsewhere through the transfer portal. One of the most electrifying point guards in college basketball, Marcus Carr, transferred to Texas and seven-footer Liam Robbins is now at Vanderbilt.</p>
     <p>Each of the top seven scorers from Minnesota’s team last year has departed. They combined to average 70 points per game last year for the Golden Gophers, a team that totaled 72.5 points per game.</p>
     <p>Returning forward Isaiah Ihnen will miss the entire 2021-22 season due to a knee injury, it was announced in July. This is a massive blow for Johnson’s crew as Ihnen was one of the most talented returning players. Instead, Minnesota will have a ton of new faces who will all look to help the Golden Gophers remain out of the last place spot in the Big Ten.</p>
-    <div class="map">
-      <iframe title="Big Ten Conference" aria-label="map" id="datawrapper-chart-4j3Mn" src="https://datawrapper.dwcdn.net/4j3Mn/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="508"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();</script>
-    </div>
-
+    <h6>Logos Courtesy of University of Michigan, Purdue University, Univeristy of Illinois, Ohio State University, University of Maryland, Michigan State University, Indiana University, Rutgers University, University of Iowa, University of Wisconsin, University of Nebraska, Northwestern University, Penn State University and University of Minnesota.</h6>
 <div class="footer">
   <p><a href="http://matt5levine.github.io/jour352/portfolio/mattlevine-resume">Matt Levine, Copyright</a></p>
 </div>
-
 </body>
 
 </html>
